# LearnOpenGL

./: Makefile  README.md  meson.build
include/: app.h  mesh.h  shader.h  texture.h  uniform.h  vertex.h
include/glad/: gl.h
shaders/: fragment.glsl  fragment01.glsl  vertex.glsl
src/: app.c  main.c  mesh.c  shader.c  texture.c
